# git-context-mcp-forge

./: .dockerignore  .gitignore  README.md  auto_mcp_json.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
src/application/: __init__.py  rag_service.py  repository_service.py
src/config/: log_config.py
src/llm_workflows/: state.py
src/llm_workflows/adapters/: blob.py  parser.py
src/llm_workflows/graphs/: rag_to_context_graph.py  repo_to_vectordb_graph.py
src/llm_workflows/mcp/: formatters.py  tools.py
src/llm_workflows/nodes/: code_loader.py  code_splitter.py  document_formatting.py  embedder.py  hypothetical_question_create.py  retriever.py
src/mcp/: __init__.py  formatters.py  tools.py
src/models/: git_repository.py
src/modules/: __init__.py  code_loader.py  code_splitter.py  github.py  rag.py
src/services/: __init__.py
src/utils/: chroma_utils.py  git_repository_utils.py
