[project]
name = "git-context-mcp-forge"
version = "0.1.0"
description = "CodePresso hackathon team1 project" 
authors = [
    {name = "honeyuheony", email = "kwh1019_@naver.com"}
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    # 핵심 LangChain 관련 패키지
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.2",
    # 임베딩 및 벡터 저장소
    "chromadb>=0.4.24,<0.5.0",
    "openai>=1,<2",
    # 유틸리티 패키지
    "python-dotenv>=1.0.1,<1.1.0",
    "chardet>=5.0.0,<6.0.0",
    "gitpython>=3.1.30,<3.2.0",
    "pydantic>=2.0.0,<3.0.0",
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# uv 특정 설정
